cks/opa/3-opa-contraint-required-registry.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredRegistry
metadata:
  name: images-from-docker-hub
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "devops"
  parameters:
    registry: "quay.io/"
