cks/opa/5-opa-constraint-deny-secret.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenySecret
metadata:
  name: deny-secret
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Secret"]
    namespaces:
      - "curso"
  parameters:
    message: "ACESSO NEGADO!"
