cks/opa/5-opa-template-deny-secret.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenysecret
spec:
  crd:
    spec:
      names:
        kind: K8sDenySecret 
      validation:
        openAPIV3Schema:
          properties:
            message:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenysecret

        violation[{"msg": msg}] {
          1 > 0
          msg := input.parameters.message
        }
